# Crossy-Road-Plus

./: 2022li1g010.cabal  README.md
assets/img/: button_normal.psd  button_pressed.psd
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
doc/Documentação Final/: Audio.html  Bot.html  Conversores.html  DeslizaJogoDefinido_2022li1g010.html  ExtraDataConstructores.html  LI12223.html  Main.html  Niveis.html  Personalizar_2022li1g010.html  Tarefa1_2022li1g010.html  Tarefa2_2022li1g010.html  Tarefa3_2022li1g010.html  Tarefa4_2022li1g010.html  Tarefa5_2022li1g010.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index.html  index.html
doc/LI12223/: doc-index.html  index.html
doc/Tarefa1/: doc-index.html  index.html
src/: Audio.hs  Bot.hs  Conversores.hs  DeslizaJogoDefinido.hs  ExtraDataConstructors.hs  LI12223.hs  Main.hs  Niveis.hs  Personalizar.hs  Tarefa1_2022li1g010.hs  Tarefa2_2022li1g010.hs  Tarefa3_2022li1g010.hs  Tarefa4_2022li1g010.hs  Tarefa5_2022li1g010.hs  save.txt
tests/: Spec.hs  Tarefa1_2022li1g010_Spec.hs  Tarefa2_2022li1g010_Spec.hs  Tarefa3_2022li1g010_Spec.hs  Tarefa4_2022li1g010_Spec.hs  Tarefa5_2022li1g010_Spec.hs
(+46 files in other folders)
