cabal-version:      2.4
name:               2022li1g010
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author:             Pedro Figueiredo Pereira <a104082@alunos.uminho.pt>
                    Jorge Ubaldo Rodrigues Ferreira <a104096@alunos.uminho.pt>

library
  exposed-modules:
    LI12223
    Tarefa1_2022li1g010
    Tarefa2_2022li1g010
    Tarefa3_2022li1g010
    Tarefa4_2022li1g010
  build-depends:    base ^>=4.16.3.0
  hs-source-dirs:   src
  default-language: Haskell2010

executable 2022li1g010
  main-is:          Main.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g010
    Tarefa2_2022li1g010
    Tarefa3_2022li1g010
    Tarefa4_2022li1g010
  build-depends:    base ^>=4.16.3.0
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite 2022li1g010-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g010
    Tarefa2_2022li1g010
    Tarefa3_2022li1g010
    Tarefa4_2022li1g010
    Tarefa1_2022li1g010_Spec
    Tarefa2_2022li1g010_Spec
    Tarefa3_2022li1g010_Spec
    Tarefa4_2022li1g010_Spec
  build-depends:        base ^>=4.16.3.0, HUnit
  hs-source-dirs:       tests src
  default-language:     Haskell2010
